vector field file output

--- a/Mission Profile.ipynb
+++ b/Mission Profile.ipynb
@@ -70,6 +70,7 @@
     "x_vec_array = []\n",
     "y_vec_array = []\n",
     "\n",
+    "# loop in y then x to properly shape the array\n",
     "for y_crd in world_y:\n",
     "    x_vecs = []\n",
     "    y_vecs = []\n",
@@ -138,6 +139,32 @@
     "* dy\n",
     "* dz"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patch_data = pd.concat([pd.DataFrame(np.reshape(world_X,(400,1))), pd.DataFrame(np.reshape(world_Y,(400,1))),pd.DataFrame(np.reshape(behavior_dx,(400,1))), pd.DataFrame(np.reshape(behavior_dy,(400,1)))], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write to datafile formatted for NetLogo\n",
+    "patch_data.to_csv('test_patch_data.txt', index=False, header=False, sep=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
