refactor create environment directory

--- a/Mission Profile.ipynb
+++ b/Mission Profile.ipynb
@@ -151,7 +151,7 @@
    "source": [
     "# write to datafiles formatted for NetLogo\n",
     "\n",
-    "environment_folder = './test_environment/'\n",
+    "environment_folder = './environments/test_environment/'\n",
     "\n",
     "i = 0\n",
     "for file in mission_array:\n",
